--- a/History.txt
+++ b/History.txt
@@ -1,8 +1,12 @@
-=== 0.4.0 / 2009-??-??
+=== 0.4.0 / 2010-??-??
 
 * 0.4.0 alpha
-  * Use camel case for a generated module name.
+  * Change coding styles.
   * Support packed repeated field.
+  * Incompatibility issues.
+    * Use camel case for a generated module name.
+    * Internal API changes.
+    * Enum values.
 * 0.3.3 (rev.218)
   * Support C-like comment.
   * Optimize for speed.
